# dfdWild

./: BCCB.cpp  BCCB.h  BlurEqualization.cpp  BlurEqualization.h  CMakeLists.txt  RMCBDFastAlterMin.cpp  RMCBDFastAlterMin.h  UDEFilters.cpp  UDEFilters.h  UnbiasedDefocusEqualizationFilters.cpp  circulantMatrix.cpp  circulantMatrix.h  main.cpp  mat_vector.h  parameters.h  tgvOperator.h
src/: AlgOperator.cpp  AlgOperator.h  BCCB.cpp  BCCB.h  DNCuts.cpp  DNCuts.h  MRFmin.h  RMCBDFastAlterMin.cpp  RMCBDFastAlterMin.h  RobustEstimation.h  SparseMatTools.cpp  SparseMatTools.h  UDEFilters.cpp  UDEFilters.h  UnbiasedDefocusEqualizationFilters.cpp  UnbiasedDefocusEqualizationFilters.h  algTemplate.h  circulantMatrix.cpp  circulantMatrix.h  compressedWeightArray.cpp  compressedWeightArray.h  imageFeature.h  main.cpp  mat_vector.h  myTypes.h  parameters.h  tgvOperator.cpp  ugraph.cpp  ugraph.h  utility.cpp  utility.h  wildDfd.cpp  wildDfd.h
src/maxflow/: block.h  maxflow.cpp
src/test/: unitTest.cpp  unitTest.h
